[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Isometric/chestClosed_N.png" type="Texture" id=1]
[ext_resource path="res://src/Scenes/GameWorld/AssociatedDialogue.gd" type="Script" id=2]
[ext_resource path="res://src/Scenes/GameWorld/Interactable.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 76.6523

[node name="Chest" type="StaticBody2D"]
position = Vector2( -0.432854, -18.3771 )
collision_layer = 3
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.75995, -171.359 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 4.75995, -171.359 )
polygon = PoolVector2Array( 34.3073, 165.601, 34.8913, 197.72, 11.8243, 207.94, -32.8496, 186.916, 6.27658, 150.126 )

[node name="AssociatedDialogue" type="Node" parent="."]
script = ExtResource( 2 )
dialogue_path = "res://src/Dialogue/npc.json"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -17.1882, 41.7427 )
shape = SubResource( 1 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
